# cosmoplots

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.extra  setup.py
.github/workflows/: release.yml  tests.yml
assets/: example.py
cosmoplots/: __init__.py  axes.py  colors.py  concat.py  default.mplstyle  figure_defs.py  thick_line.mplstyle  two_columns.mplstyle
tests/: test_concat.py
