[tool.poetry]
name = "cosmoplots"
version = "0.1.3"
description = "Routines to get a sane default configuration for production quality plots."
homepage = "https://github.com/uit-cosmo/cosmoplots"
authors = ["gregordecristoforo <gregor.decristoforo@gmail.com>"]
license = "MIT License"
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
numpy = ">=1.15.0"
matplotlib = ">=3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
