[tool.poetry]
name = "cosmoplots"
version = "0.1.6"
description = "Routines to get a sane default configuration for production quality plots."
homepage = "https://github.com/uit-cosmo/cosmoplots"
authors = ["gregordecristoforo <gregor.decristoforo@gmail.com>"]
license = "MIT License"
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">=1.15.0"
matplotlib = ">=3.3.2"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
xdoctest = "^1.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
